[package]
name = "yachat"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-agreement-utils = "0.1"
ya-client-model = "0.1"
ya-client = { version = "0.4", features = ['cli'] }
ya-core-model = { version = "0.1", features = ["activity", "appkey"] }
ya-service-bus = "0.2"

actix = "0.9"
anyhow = "1.0.19"
chrono = "0.4.10"
dotenv = "0.15.0"
flexi_logger = { version = "0.15", features = ["colors"] }
futures = "0.3"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0.10"
